# sto-warp

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALLATION.md  PROJECT_CONTEXT.md  README.md  install.ps1  install.sh  pyproject.toml  sto_warp.bat  sto_warp.sh
.github/workflows/: build-crops-tarball.yml  release.yml  windows-installer.yml
docs/: BOFF_DETECTION.md  CARGO_DATA_PLAN.md  DATA_LIFECYCLE.md  FAST_CORRECTION_MODE.md  ML_PIPELINE.md  REMOTE_SYNC_AUDIT.md  SETS_GUIDE.md  SYNC_ARCHITECTURE.md  TRAIT_DETECTION.md  WARP_GUIDE.md  backlog.md  client_user_view_filter.md  gpu_setup.md  implementation_plan.md  src_patches.md  sto_slots_rules.md  warp_core.md  warp_ml_roadmap.md  warp_separation_roadmap.md
packaging/aur/: PKGBUILD  README.md
packaging/windows/: README.md  build_icon.py  sto-warp.iss  sto-warp.spec
tests/: conftest.py  diag_german_ui.py  diag_one_image.py  diag_rep_raw.py  diag_space_rep.py  diag_space_rep_close.py  diag_thr_corpus.py  diag_thr_sweep.py  test_annotation_widget_tooltip.py  test_cargo_ref_icon.py  test_cargo_shape.py  test_ground_discovery.py  test_product_identity.py  test_skill_grid.py  test_startup.py  test_sync_screen_upload.py  test_trainer_file_menu.py  test_userdata.py  test_virtual_crop_guard.py  test_warp_skill_export.py
tests/_ground_scan/: diag_band_tighten.py  diag_ground_geom.py  diag_ground_mask.py  diag_mask_overlay.py  diag_space_regression.py  scan_ground_pipeline.py  viz_markers_and_slots.py
tools/: build_crops_tarball.py
tools/hf_dataset_workflow/: README.md
tools/hf_dataset_workflow/.github/workflows/: build-crops-tarball.yml
warp/: __init__.py  build_writer.py  cli.py  config.py  debug.py  folder_picker.py  sets_export.py  style.py  themes.py  ui_helpers.py  userdata.py  warp_importer.py
warp/data/: __init__.py  asset_sync.py  cargo.py  empty_build.py  ui_translations.csv
warp/data/baseline/: boff_abilities.json  equipment.json  ship_list.json  starship_traits.json  traits.json
warp/gui/: __init__.py  cold_start_dialog.py  desktop_install.py  icon_round.py  launcher.py  log_view.py  macos_app_bundle.py  preview_view.py  progress_bar.py  results_view.py  sync_coordinator.py  warp_window.py  windows_shortcut.py
warp/knowledge/: community_crops.py  sync_client.py
warp/recognition/: boff_keys.py  boff_marker.py  eq_geometry.py  ground_eq_geometry.py  icon_matcher.py  layout_detector.py  screen_classifier.py  skill_grid.py  skill_template.json  text_extractor.py  trait_grid.py  ui_translations.py
warp/resources/: __init__.py
warp/tools/: approve_staging.py  check_db.py  debug_fetch.py  icon_equivalence.py  make_baseline.py  scraper.py  scrub_training_data.py  test_pipeline.py
warp/trainer/: _ui_utils.py  annotation_widget.py  constants.py  embedder_trainer.py  fast_session.py  migrate_annotations_to_hash.py  model_updater.py  ocr_diag.py  screen_type_trainer.py  sync.py  synthetic_crop_generator.py  trainer_window.py  training_data.py  workers.py
